--- a/app/assets/stylesheets/product.css.scss
+++ b/app/assets/stylesheets/product.css.scss
@@ -436,6 +436,8 @@
     font-size: 14px;
     padding: 8px 10px;
     float: left;
+    //width: auto;
+    //overflow: hidden;
 }
 
 .tag-editor input {
