--- a/app/assets/stylesheets/tags.css.scss
+++ b/app/assets/stylesheets/tags.css.scss
@@ -1,6 +1,6 @@
 .tags {
 
-    .container{
+    /*.container{
       width: 1170px;
       margin: 0 auto;
     }
@@ -64,6 +64,7 @@
     #tags_list{
         padding-top: 40px;
     }
+    */
 
 
 }
