--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -6,8 +6,8 @@ $nav: #F8F8F8;
 
 $dark: #2c2c2c;
 $light-grey: #787878;
-$base: #406DE4;
-$light: #E7F0FA;
+$base: #2c2c2c;                  //#406DE4
+$light: #E7F0FA;                 // #E7F0FA
 $accent: #FFBD31;
 $red-accent: #D84765;
 
