fix footer float

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -6,5 +6,5 @@
       <h3>Manage credentials and your <strong>plan</strong>.</h3>
     </div>
   </header>
-</div>
+<!-- </div> -->
 <%= render 'form', user: @user %>
