--- a/app/assets/stylesheets/product.css.scss
+++ b/app/assets/stylesheets/product.css.scss
@@ -318,7 +318,7 @@
     border-width: 1px;
     // border-style: solid;
     // border-color: #dddddd;
-    min-height: 385px;
+    min-height: 220px;
   }
 
   .tab-pane:nth-child(1) {
@@ -466,4 +466,10 @@
 
 a:hover{
   color:#000;
+}
+
+.edit {
+  .tab-pane {
+    min-height: 385px;
+  }
 }
