--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -32,6 +32,11 @@
               </li>
             </ul>
         </li>
+        <% if current_user.admin? %>
+        <li>
+          <%= link_to "Drafts", "/admin/get_drafts" %>
+        </li>
+        <% end %>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <% if current_user %>
