--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -6,6 +6,7 @@
         width: 100%;
         height: 500px;
         background-color: $base;
+        // background-image: image-url("noise.png");
         // background-image: url('');
         // background-size: cover;
         // background-position: 50% 50%;
