--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -1,13 +1,22 @@
 $light: 300;
 $bold: 800;
 
+// $bg-color: #FFFFFF;       //main background color, white
+// $nav: #F8F8F8;
+// $dark: #2c2c2c;
+// $light-grey: #787878;
+// $base: #406DE4;
+// $light: #E7F0FA;
+// $accent: #FFBD31;
+// $red-accent: #D84765;
+
 $bg-color: #FFFFFF;       //main background color, white
 $nav: #F8F8F8;
 $dark: #2c2c2c;
 $light-grey: #787878;
-$base: #406DE4;
+$base: #4284f4;
 $light: #E7F0FA;
-$accent: #FFBD31;
+$accent: #FFB632;
 $red-accent: #D84765;
 
 // These need to be removed, but log files, caches prevent removal.
