added floaters to marketplace

--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -28,6 +28,7 @@
       text-transform: uppercase;
       color: $bg-color;
       z-index: 10;
+      background-image: none;
     }
 
     .logo {
