--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -287,6 +287,7 @@ b, strong {
     margin-top: -20px;
     width: 100%;
     text-align: center;
+    position: relative;
     // background-color: $cream;
     // background-image: image-url("noise.png");
     // color: $light-grey;
@@ -548,4 +549,18 @@ b, strong {
 
 .dropdown-menu a {
   cursor: pointer;
+}
+
+.floater-1{
+    position: fixed;
+    top: 6em;
+    right: 2em;
+    z-index: 10;
+}
+
+.floater-2{
+    position: fixed;
+    top: 10.5em;
+    right: 2em;
+    z-index: 10;
 }
