--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -67,6 +67,11 @@ html, body {
   height: 100%;
 }
 
+.btn-base {
+  background-color: $base;
+  color: $bg-color;
+}
+
 .btn-light {
   background-color: $light;
   color: $dark;
@@ -551,16 +556,27 @@ b, strong {
   cursor: pointer;
 }
 
+.floater-0 {
+  position: fixed;
+  top: 4em;
+  right: 1em;
+  z-index: 10;
+}
+
+.close {
+  margin-left: 1em;
+}
+
 .floater-1{
-    position: fixed;
-    top: 6em;
-    right: 2em;
-    z-index: 10;
+  position: fixed;
+  top: 8em;
+  right: 1em;
+  z-index: 10;
 }
 
 .floater-2{
-    position: fixed;
-    top: 10.5em;
-    right: 2em;
-    z-index: 10;
+  position: fixed;
+  top: 12em;
+  right: 1em;
+  z-index: 10;
 }
