--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -10,8 +10,19 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="navbar-collapse collapse" collapse="isCollapsed">
       <ul class="nav navbar-nav">
-        <li>
-          <%= link_to "Marketplace", "/#/marketplace"%>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Marketplace <span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <li>
+              <%= link_to "Technologies", "/#/marketplace"%>
+            </li>
+            <li>
+              <%= link_to "Tags", "/#/tags"%>
+            </li>
+            <li>
+              <%= link_to "Drafts", "/admin/get_drafts" %>
+            </li>
+          </ul>
         </li>
         <li>
           <%= link_to "Integrations", odk_sf_legacy_mappings_path, 'ng-click' => "$event.stopPropagation()" %>
@@ -20,7 +31,7 @@
           <%= link_to "Content", "/#/release-notes"%>
         </li>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"> More <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">... <span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
               <% unless current_user %>
                 <li>
@@ -31,8 +42,8 @@
                 <%= link_to "Developers", "/#/developers"%>
               </li>
               <li>
-                <%= link_to "Drafts", "/admin/get_drafts" %>
-              </li>
+                <%= link_to "Our Team (soon)", "#"%>
+              </li>         
             </ul>
         </li>        
       </ul>
@@ -71,9 +82,6 @@
             <% end %>
           </li>
         <% end %>
-        <li>
-          <button onClick="ga('send', 'event', 'Revenue', 'Open Donate Modal');" type="button" data-toggle="modal" data-target="#donate_modal" class="btn btn-open-donation">Donate</button>
-        </li>
       </ul>
     </div>
 </nav>
