--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -30,10 +30,10 @@
     <div id="wrap">
       <div id="main">
         <%= render "shared/header" %>
-        <div class="floater-0 alert alert-danger alert-dismissible" role="alert">
+        <!-- <div class="floater-0 alert alert-danger alert-dismissible" role="alert">
           <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
           <a onClick="ga('send', 'event', 'Revenue', 'Open Donate Modal');" type="button" data-toggle="modal" data-target="#donate_modal">Make a <strong>donation</strong> now.</a>
-        </div>
+        </div> -->
         <div ng-view>
         </div>
         <div class='growl-wrapper'>
