--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -302,7 +302,7 @@ b, strong {
     padding: rem-calc(55px) 0 rem-calc(50px);
     padding-bottom: rem-calc(30px);
     background-color: $base;
-    background-image: image-url("noise.png");
+    // background-image: image-url("noise.png");
     color: $bg-color;
 }
 
