--- a/app/assets/stylesheets/product.css.scss
+++ b/app/assets/stylesheets/product.css.scss
@@ -32,7 +32,7 @@
 
 .product-list {
   $product-padding: 1em;
-  $product-margin: 0.8em;
+  $product-margin: 0.6em;
   position: relative;
 
 
@@ -55,7 +55,7 @@
       height: 100%;
       color: $light-grey;
       background-color: $nav;
-      background-image: image-url("noise.png");
+      // background-image: image-url("noise.png");
       text-align: center;
       position: relative;
       padding: $product-padding;
@@ -330,6 +330,7 @@
 .new-product-link {
   padding-bottom: 1em;
   // background-color: $light;
+  margin-bottom: 1em;
 }
 
 .add-modal {
@@ -365,4 +366,24 @@ a:hover{
   .tab-pane {
     min-height: 385px;
   }
+}
+
+#custom-accord {
+  margin-top: .6em;
+  margin-left: .6em;
+  margin-right: -.6em;
+  color: $dark;
+}
+
+#custom-accord .panel-default {
+    border-color: white !important;
+}
+#custom-accord .panel-heading {
+    background-color: $nav !important;
+    border-color: white !important; 
+    background-image: none !important;
+
+}
+#custom-accord .panel-group .panel-heading+.panel-collapse .panel-body {
+    border-top: 0px white !important;
 }
