--- a/app/assets/stylesheets/product.css.scss
+++ b/app/assets/stylesheets/product.css.scss
@@ -397,7 +397,6 @@ a:hover{
   width: 100%;
   display: inline-block;     
   // position: relative;    
-  z-index: 1;     
-  padding: 2em 2em 2em 0em;     
-  
+  // z-index: 1;     
+  // padding-right: 1em;
 }
