--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -11,6 +11,7 @@
 
   #particles-js{
       position: absolute;
+      height: 30em;
       width: 100%;
       z-index: 8;
   }
@@ -22,8 +23,9 @@
     color: $bg-color;
     font-size: rem-calc(40px);
     line-height: 1.3;
-    // font-weight: 100;
-    // text-transform: uppercase;
+    font-weight: 100;
+    text-transform: uppercase;
+    margin-bottom: 2em;
   }
 
   .logo {
@@ -37,6 +39,15 @@
     margin-right: auto;
     margin-top: 6.5em;
     margin-bottom: 1.5em;
+  }
+
+  .who {
+    position: relative;
+    text-align: center;
+    top: 3em;
+    font-size: rem-calc(18px);
+    color: $bg-color;
+    font-weight: 100;
   }
 
   .numbers h3 {
