Added team_members table in database, set up angular controller to get all staff and bring them to the page

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -42,7 +42,7 @@
                 <%= link_to "Developers", "/#/developers"%>
               </li>
               <li>
-                <%= link_to "Our Team (soon)", "#"%>
+                <%= link_to "Our Team (soon)", "/#/our_team"%>
               </li>         
             </ul>
         </li>        
