recovered hidden flash messages

--- a/app/views/odk_sf_legacy/mappings/index.html.erb
+++ b/app/views/odk_sf_legacy/mappings/index.html.erb
@@ -5,9 +5,8 @@
       <h3>Your apps are <strong>better</strong> together.</h3>
     </div>
   </header>
+  <%= render "shared/flash" %>
   <div class="featurette mappings">
-    <hr class="light">
-    <hr class="dark">
     <br>
     <div class="container">
       <div class="row">
