modified welcome image and base

--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -2,9 +2,9 @@
 
   .banner {
     position: relative;
-    background-color: $dark;
+    background-color: $base;
     background-image: image-url("wow_bg.jpg");
-    background-repeat: no-repeat;
+    // background-repeat: no-repeat;
     background-position: center;
     // background-size: 100%;
     width: 100%;
