--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -10,19 +10,8 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="navbar-collapse collapse" collapse="isCollapsed">
       <ul class="nav navbar-nav">
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Marketplace <span class="caret"></span></a>
-          <ul class="dropdown-menu" role="menu">
-            <li>
-              <%= link_to "Technologies", "/#/marketplace"%>
-            </li>
-            <li>
-              <%= link_to "Tags", "/#/tags"%>
-            </li>
-            <!-- <li>
-              <%= link_to "Drafts", "/admin/get_drafts" %>
-            </li> -->
-          </ul>
+        <li>
+          <%= link_to "Marketplace", "/#/marketplace"%>
         </li>
         <li ng-controller="LoginController as loginCtrl">
           <a ng-click="checkLogin('<%= odk_sf_legacy_mappings_path %>')">Integrations</a>
