still can't figure out why the files don't interact...

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -7,5 +7,5 @@
     </div>
   </header>
 </div>
-<%= render 'form', user: @user %>
 
+<%= render file: "/public/the_bridge_templates/user/user_info", user: @user %>
