still can't figure out why the files don't interact...

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -7,4 +7,6 @@
     </div>
   </header>
 </div>
-<%= render 'form', user: @user %>
+<%= render file: "/public/the_bridge_templates/user/form", user: @user %>
+
+
