styled drafts page

--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -196,6 +196,14 @@ b, strong {
 
 }
 
+  .add {
+    color: green;
+  }
+
+  .remove {
+    color: $red-accent
+  }
+
 .btn-map-label {
   padding-left: 2px;
 }
