--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -17,7 +17,7 @@
           <a ng-click="checkLogin('<%= odk_sf_legacy_mappings_path %>')">Integrations</a>
         </li>
         <li>
-          <%= link_to "Content", "/#/release-notes"%>
+          <a href="https://medium.com/@openFn" target="_blank">Content</a>
         </li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">About <span class="caret"></span></a>
