Javascript will not fail when handler is not defined

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -229,6 +229,9 @@
 
   // Close Checkout on page navigation
   $(window).on('popstate', function() {
-    handler.close();
+    if (typeof handler !== "undefined")
+    {
+      handler.close();
+    }
   });
 </script>
