--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -273,9 +273,9 @@ b, strong {
 }
 
 .btn-donate, .btn-donate:hover {
-  color: $nav;
-  background-color: $red-accent;
-  // background-image: image-url("noise.png");
+  color: $bg-color;
+  background-color: $base;
+  background-image: image-url("noise.png");
   // width: 75px;
   // height: 50px;
 
@@ -285,9 +285,9 @@ b, strong {
 }
 
 .btn-donate-go {
-  color: $nav;
-  background-color: $red-accent;
-  // background-image: image-url("noise.png");
+  color: $bg-color;
+  background-color: $base;
+  background-image: image-url("noise.png");
   width: 50px;
   height: 50px;
 
