--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -3,23 +3,23 @@
     <div class="col-xs-12">
 
       <p class="text-center">
-        openFn is a non-profit and all of our code is open source.
+        open[Fn] is connecting technologies for a more efficient development sector. We are a non-profit and all of our code is open source.
         <br><br>
         <a href="https://github.com/OpenFn/OpenFn-Site" target="_blank">
-          Join our developers <i class="fa fa-github fa-lg"></i>
+          Join our developers on github <i class="fa fa-github fa-lg"></i>
         </a>, 
         <a href="mailto:admin@openfn.org" target="_blank">
-         get in touch <i class="fa fa-envelope-o fa-lg"></i>
-        </a>, or follow us on 
+         get in touch over email <i class="fa fa-envelope-o fa-lg"></i>
+        </a>, or follow us on facebook
         <a href="https://www.facebook.com/openfn" target="_blank">
           <i class="fa fa-facebook fa-lg"></i> 
-        </a>, 
+        </a>, twitter
         <a href="https://twitter.com/openfn" target="_blank">
           <i class="fa fa-twitter fa-lg"></i>
-        </a> , and 
+        </a> , and medium
         <a href="https://medium.com/@openFn/" target="_blank">
           <i class="fa fa-medium fa-lg"></i>
-        </a> .
+        </a>.
       </p>
     </div>
   </div>
