--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,11 +34,8 @@
     
 
 
-
       </div>
     </div>
-    <footer class="footer">
-      <%= render "shared/footer" %>
-    </footer>
+    <footer class="footer" ng-include="'/the_bridge_templates/footer.html'"></footer>
   </body>
 </html>
