--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -31,7 +31,7 @@
                 </li>
               <% end %>
               <li>
-                <a href="/#/developers">Developers <i class="fa fa-file-code-o"></i></a>
+                <a href="/#/developers">Developers</a>
               </li>        
             </ul>
         </li>        
