modified donation thank you

--- a/app/views/charges/create.html.erb
+++ b/app/views/charges/create.html.erb
@@ -3,10 +3,10 @@
 <header class="header-image">
   <div class="headline">
     <h1>
-      thank <strong>you!</strong>
+      <strong>Thank you!</strong>
     </h1>
     <h3>
-      Your <strong>support</strong> is what keeps openFn connecting.
+      Your <strong>support</strong> is what keeps open[Fn] connecting.
     </h3>
   </div>
 </header>
@@ -17,10 +17,10 @@
     <div class="container">
 	    <br>
         <div class="row flat">
-    			You donated <strong>$<%= @amount.to_i / 100 %></strong> and will receive an email receipt from Stripe shortly. Thank you so much.
+    			You donated <strong>$<%= @amount.to_i / 100 %></strong> and will receive an email receipt from Stripe shortly with our Tax ID number. Thank you so much.
           <br>
           <br>
-          — The openFn Team
+          — the open[Fn] team
 		</div>
 	</div>
 </div>
