--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -45,12 +45,10 @@
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><%= current_user.email %> <span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
               <li>
-                <%= link_to edit_user_path(current_user), 'ng-click' => "$event.stopPropagation()" do %>
-                  Settings
-                <% end %>
+                <a href="/settings"> Settings</a>
               </li>
               <li>
-                <a href="#">Connected Apps (soon)</a>
+                <a href="/connected_apps">Connected Apps</a>
               </li>
               <li class="divider"></li>
               <li>
